kubernetes/headlamp/headlamp-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-https
  namespace: headlamp
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`kubernetes.bas`) || Host(`www.kubernetes.bas`)
    services:
    - kind: Service
      name: headlamp
      namespace: headlamp
      port: 4466
  tls:
    secretName: kubernetes-bas-tls
